--- a/music.html
+++ b/music.html
@@ -17,8 +17,12 @@
             <button id="next">next</button> 
             <button id="shuffle">shuffle</button>
         </div>
+        <div id="dispCurrentSong">
+            <p id="sTitle"></p>
+            <p id="sArtist"></p>
+        </div>
         <div id="playlist">
-            
+            <ul id="playlist-songs"></ul>
         </div>
 
     </div>
