--- a/music.html
+++ b/music.html
@@ -5,24 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>music player</title>
     <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/fontawesome.min.css" />
 </head>
 <body>
     
     <div id="container"> 
-        <h1 class="header">Crux Music Player</h1>
-        <div id="controls">  
-            <button id="previous">prev</button> 
-            <button id="play">play</button> 
-            <button id="pause">pause</button> 
-            <button id="next">next</button> 
-            <button id="shuffle">shuffle</button>
-        </div>
+        <h1 class="header"><i class="fa-solid fa-music"></i><i class="fa-solid fa-music"></i> Crux Music Player</h1>
         <div id="dispCurrentSong">
             <p id="sTitle"></p>
             <p id="sArtist"></p>
+            <p id="sTime"></p>
         </div>
+        <div id="controls">  
+            <button id="previous"><i class="fa-solid fa-backward-fast"></i></button> 
+            <button id="play"><i class="fa-solid fa-play"></i></button> 
+            <button id="pause"><i class="fa-solid fa-pause"></i></button> 
+            <button id="next"><i class="fa-solid fa-forward-fast"></i></button> 
+            <button id="shuffle"><i class="fa-solid fa-shuffle"></i></button>
+        </div>
+
         <div id="playlist">
-            <ul id="playlist-songs"></ul>
+            <ol id="playlist-songs"></ol>
         </div>
 
     </div>
